Remove duplicate animation definition, fix whitespace

--- a/src/sass/partials/_base.scss
+++ b/src/sass/partials/_base.scss
@@ -25,16 +25,3 @@ $width-drawer-expanded-mobile: 250px;
 a, input[type=button] {
   cursor: pointer;
 }
-
-
-@include keyframes( 'fade-in-and-out' ) {
-	0% {
-		opacity:1;
-	}
-	50% {
-		opacity:0;
-	}
-	100% {
-		opacity:1;
-	}
-}
